# atmosGOST_R_25645_166_2004

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.EN.md  README.md  atmosGOST_R_25645_166_2004.cpp  atmosGOST_R_25645_166_2004.h  atmosGOST_R_25645_166_2004.sln  atmosGOST_R_25645_166_2004.vcxproj  tables_10_11_GOST_R_25645_166_2004.h  tables_1_3_GOST_R_25645_166_2004.h  tables_4_9_GOST_R_25645_166_2004.h  test.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-test.yml
atmosGOST_R_25645_166_2004/: CMakeLists.txt  atmosGOST_R_25645_166_2004.cpp  atmosGOST_R_25645_166_2004.h  atmosGOST_R_25645_166_2004.vcxproj  atmosGOST_R_25645_166_2004.vcxproj.filters  table_1_GOST_R_25645_166_2004.cpp  table_1_GOST_R_25645_166_2004.h  table_2_GOST_R_25645_166_2004.cpp  table_2_GOST_R_25645_166_2004.h  table_3_GOST_R_25645_166_2004.cpp  table_3_GOST_R_25645_166_2004.h  tables_10_11_GOST_R_25645_166_2004.cpp  tables_10_11_GOST_R_25645_166_2004.h  tables_1_3_GOST_R_25645_166_2004.h  tables_4_9_GOST_R_25645_166_2004.cpp  tables_4_9_GOST_R_25645_166_2004.h
example_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
nrlmsise00_brodowski/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp  test_runner.cpp
